[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Main/JoinMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/linux-libertine/LinuxLibertine.tres" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -30.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 784.0
margin_bottom = 490.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 318.0
margin_right = 465.0
margin_bottom = 490.0
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 147.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "Username:"
align = 1

[node name="User" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 147.0
margin_bottom = 220.0

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 147.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 1 )
text = "Game ID:"
align = 1

[node name="GameID" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 147.0
margin_bottom = 292.0

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 147.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 2 )
text = "Create"
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/User" to="." method="_on_User_text_changed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/GameID" to="." method="_on_GameID_text_changed"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_submit_button_down"]
